--- a/imago.csproj
+++ b/imago.csproj
@@ -14,7 +14,6 @@
 		<IsAotCompatible>true</IsAotCompatible>
 		<RuntimeIdentifiers>maccatalyst-arm64</RuntimeIdentifiers>
 		<PublishAot>true</PublishAot>
-		<TrimMode>full</TrimMode>
 
 		<OutputType>Exe</OutputType>
 		<RootNamespace>imago</RootNamespace>
@@ -41,7 +40,7 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.png" BaseSize="128,128" />
+		<MauiIcon Include="Resources\AppIcon\appicon.png" BaseSize="1024,1024" />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
@@ -55,7 +54,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui" Version="9.1.1" />
-		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.10" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
 		<PackageReference Include="SkiaSharp" Version="2.88.9" />
 	</ItemGroup>
