--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           dotnet-version: "9.0.x"
 
+      - name: Upgrade XCode tools
+        run: xcode-select --install
+
       - name: Install .NET MAUI workload
         run: dotnet workload install maui
 
