--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish .NET MAUI Application on Tag
 on:
   push:
     tags:
-      - "*"
+      - "v*"
 
 jobs:
   build-and-release:
@@ -30,15 +30,18 @@ jobs:
         run: dotnet workload install maui
 
       - name: Build project for ${{ matrix.architecture }}
-        run: dotnet publish -f net9.0-maccatalyst -c Release -o output/${{ matrix.architecture }}
+        run: dotnet publish -f net9.0-maccatalyst -c Release -o output/${{ matrix.architecture }} -p:CreatePackage=false
 
-      - name: Get Release
-        id: get_release
+      - name: Create Release
+        id: create_release
         uses: actions/create-release@v1
-        with:
-          tag_name: ${{ github.ref }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
 
       - name: Upload macOS .app files
         uses: actions/upload-release-asset@v1
