--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,12 +40,12 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            const release = await github.repos.getReleaseByTag({
+            const release = await github.rest.repos.getReleaseByTag({
               owner: context.repo.owner,
               repo: context.repo.repo,
               tag: context.ref.replace('refs/tags/', ''),
             });
-            core.setOutput("upload_url", release.upload_url.split('{')[0]);
+            core.setOutput("upload_url", release.data.upload_url);
 
       - name: Upload macOS .app files
         uses: actions/upload-release-asset@v1
