--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Build project for ${{ matrix.architecture }}
         run: dotnet publish -f net9.0-maccatalyst -c Release -o output/${{ matrix.architecture }} -p:CreatePackage=false
 
-      - name: Get Release ID
+      - name: Get Release Upload URL
         id: get_release
         uses: actions/github-script@v6
         with:
@@ -50,7 +50,7 @@ jobs:
       - name: Upload macOS .app files
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ steps.get_release.outputs.upload_url }}
           asset_path: output/${{ matrix.architecture }}/Imago.app
           asset_name: Imago-${{ matrix.architecture }}.app
           asset_content_type: application/octet-stream
