--- a/imago.csproj
+++ b/imago.csproj
@@ -12,7 +12,7 @@
 		either BOTH runtimes must be indicated or ONLY macatalyst-x64. -->
 		<!-- For example: <RuntimeIdentifiers>maccatalyst-x64;maccatalyst-arm64</RuntimeIdentifiers> -->
 		<IsAotCompatible>true</IsAotCompatible>
-		<RuntimeIdentifiers>maccatalyst-arm64</RuntimeIdentifiers>
+		<RuntimeIdentifiers>maccatalyst-arm64;maccatalyst-x64</RuntimeIdentifiers>
 		<PublishAot>true</PublishAot>
 
 		<OutputType>Exe</OutputType>
