--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,10 @@ jobs:
         run: dotnet workload install maui-maccatalyst
 
       - name: Build project for ${{ matrix.architecture }}
-        run: dotnet publish -f net9.0-maccatalyst -c Release -o output/${{ matrix.architecture }}
+        run: dotnet publish -f net9.0-maccatalyst -c Release -p:CreatePackage=false
+
+      - name: Generate Zip file
+        run: cd bin/Release/net9.0-maccatalyst && zip -r Imago-${{ matrix.architecture }}.app.zip imago.app
 
       - name: Get Release Upload URL
         id: get_release
@@ -51,8 +54,8 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
-          asset_path: output/${{ matrix.architecture }}/imago-1.0.pkg
-          asset_name: Imago-${{ matrix.architecture }}.pkg
+          asset_path: bin/Release/net9.0-maccatalyst/Imago-${{ matrix.architecture }}.app.zip
+          asset_name: Imago-${{ matrix.architecture }}.app.zip
           asset_content_type: application/octet-stream
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
